website/versioned_docs/version-3.0.8/api/Humanizer.md
## Humanizer Namespace

| Classes | |
| :--- | :--- |
| [ByteRate](Humanizer.ByteRate.md 'Humanizer\.ByteRate') | Class to hold a ByteSize and a measurement interval, for the purpose of calculating the rate of transfer |
| [ByteSizeExtensions](Humanizer.ByteSizeExtensions.md 'Humanizer\.ByteSizeExtensions') | Provides extension methods for ByteSize |
| [CasingExtensions](Humanizer.CasingExtensions.md 'Humanizer\.CasingExtensions') | ApplyCase method to allow changing the case of a sentence easily |
| [CollectionHumanizeExtensions](Humanizer.CollectionHumanizeExtensions.md 'Humanizer\.CollectionHumanizeExtensions') | Humanizes an IEnumerable into a human readable list |
| [Configurator](Humanizer.Configurator.md 'Humanizer\.Configurator') | Provides a configuration point for Humanizer |
| [DateHumanizeExtensions](Humanizer.DateHumanizeExtensions.md 'Humanizer\.DateHumanizeExtensions') | Humanizes DateTime into human readable sentence |
| [DateToOrdinalWordsExtensions](Humanizer.DateToOrdinalWordsExtensions.md 'Humanizer\.DateToOrdinalWordsExtensions') | Humanizes DateTime into human readable sentence |
| [DefaultDateOnlyHumanizeStrategy](Humanizer.DefaultDateOnlyHumanizeStrategy.md 'Humanizer\.DefaultDateOnlyHumanizeStrategy') | The default 'distance of time' \-\> words calculator\. |
| [DefaultDateTimeHumanizeStrategy](Humanizer.DefaultDateTimeHumanizeStrategy.md 'Humanizer\.DefaultDateTimeHumanizeStrategy') | The default 'distance of time' \-\> words calculator\. |
| [DefaultDateTimeOffsetHumanizeStrategy](Humanizer.DefaultDateTimeOffsetHumanizeStrategy.md 'Humanizer\.DefaultDateTimeOffsetHumanizeStrategy') | The default 'distance of time' \-\> words calculator\. |
| [DefaultFormatter](Humanizer.DefaultFormatter.md 'Humanizer\.DefaultFormatter') | Default implementation of IFormatter interface\. |
| [DefaultTimeOnlyHumanizeStrategy](Humanizer.DefaultTimeOnlyHumanizeStrategy.md 'Humanizer\.DefaultTimeOnlyHumanizeStrategy') | The default 'distance of time' \-\> words calculator\. |
| [DynamicNumberOfCharactersAndPreserveWordsTruncator](Humanizer.DynamicNumberOfCharactersAndPreserveWordsTruncator.md 'Humanizer\.DynamicNumberOfCharactersAndPreserveWordsTruncator') | Truncate a string to a fixed number of letters or digits, preserving whole words by never cutting a word in half\. If a complete word \(plus the delimiter, if any\) cannot fit, then only the delimiter is returned\. When truncating from the left, the delimiter is prepended if a complete word can be preserved; otherwise, only the delimiter is returned\. The allowed count is computed by counting only letters/digits\. |
| [EnglishArticle](Humanizer.EnglishArticle.md 'Humanizer\.EnglishArticle') | Contains methods for removing, appending and prepending article prefixes for sorting strings ignoring the article\. |
| [EnumDehumanizeExtensions](Humanizer.EnumDehumanizeExtensions.md 'Humanizer\.EnumDehumanizeExtensions') | Contains extension methods for dehumanizing Enum string values\. |
| [EnumHumanizeExtensions](Humanizer.EnumHumanizeExtensions.md 'Humanizer\.EnumHumanizeExtensions') | Contains extension methods for humanizing Enums |
| [HeadingExtensions](Humanizer.HeadingExtensions.md 'Humanizer\.HeadingExtensions') | Contains extensions to transform a number indicating a heading into the textual representation of the heading\. |
| [In](Humanizer.In.md 'Humanizer\.In') | |
| [In\.Eight](Humanizer.In.Eight.md 'Humanizer\.In\.Eight') | |
| [In\.Five](Humanizer.In.Five.md 'Humanizer\.In\.Five') | |
| [In\.Four](Humanizer.In.Four.md 'Humanizer\.In\.Four') | |
| [In\.Nine](Humanizer.In.Nine.md 'Humanizer\.In\.Nine') | |
| [In\.One](Humanizer.In.One.md 'Humanizer\.In\.One') | |
| [In\.Seven](Humanizer.In.Seven.md 'Humanizer\.In\.Seven') | |
| [In\.Six](Humanizer.In.Six.md 'Humanizer\.In\.Six') | |
| [In\.Ten](Humanizer.In.Ten.md 'Humanizer\.In\.Ten') | |
| [In\.Three](Humanizer.In.Three.md 'Humanizer\.In\.Three') | |
| [In\.Two](Humanizer.In.Two.md 'Humanizer\.In\.Two') | |
| [InDate](Humanizer.InDate.md 'Humanizer\.InDate') | |
| [InDate\.Eight](Humanizer.InDate.Eight.md 'Humanizer\.InDate\.Eight') | |
| [InDate\.Five](Humanizer.InDate.Five.md 'Humanizer\.InDate\.Five') | |
| [InDate\.Four](Humanizer.InDate.Four.md 'Humanizer\.InDate\.Four') | |
| [InDate\.Nine](Humanizer.InDate.Nine.md 'Humanizer\.InDate\.Nine') | |
| [InDate\.One](Humanizer.InDate.One.md 'Humanizer\.InDate\.One') | |
| [InDate\.Seven](Humanizer.InDate.Seven.md 'Humanizer\.InDate\.Seven') | |
| [InDate\.Six](Humanizer.InDate.Six.md 'Humanizer\.InDate\.Six') | |
| [InDate\.Ten](Humanizer.InDate.Ten.md 'Humanizer\.InDate\.Ten') | |
| [InDate\.Three](Humanizer.InDate.Three.md 'Humanizer\.InDate\.Three') | |
| [InDate\.Two](Humanizer.InDate.Two.md 'Humanizer\.InDate\.Two') | |
| [InflectorExtensions](Humanizer.InflectorExtensions.md 'Humanizer\.InflectorExtensions') | |
| [LocaliserRegistry&lt;TLocaliser&gt;](Humanizer.LocaliserRegistry_TLocaliser_.md 'Humanizer\.LocaliserRegistry\<TLocaliser\>') | A registry of localised system components with their associated locales |
| [MetricNumeralExtensions](Humanizer.MetricNumeralExtensions.md 'Humanizer\.MetricNumeralExtensions') | Contains extension methods for changing a number to Metric representation \(ToMetric\) and from Metric representation back to the number \(FromMetric\) |
| [NoMatchFoundException](Humanizer.NoMatchFoundException.md 'Humanizer\.NoMatchFoundException') | This is thrown on String\.DehumanizeTo enum when the provided string cannot be mapped to the target enum |
| [NumberToNumberExtensions](Humanizer.NumberToNumberExtensions.md 'Humanizer\.NumberToNumberExtensions') | Number to Number extensions |
| [NumberToTimeSpanExtensions](Humanizer.NumberToTimeSpanExtensions.md 'Humanizer\.NumberToTimeSpanExtensions') | Provides extension methods for converting numeric values to [System\.TimeSpan](https://learn.microsoft.com/en-us/dotnet/api/system.timespan 'System\.TimeSpan') instances, enabling fluent and readable time duration creation \(e\.g\., 5\.Seconds\(\), 3\.Hours\(\), 2\.Weeks\(\)\)\. |
| [NumberToWordsExtension](Humanizer.NumberToWordsExtension.md 'Humanizer\.NumberToWordsExtension') | Transform a number into words; e\.g\. 1 =\> one |
| [On](Humanizer.On.md 'Humanizer\.On') | |
| [On\.April](Humanizer.On.April.md 'Humanizer\.On\.April') | Provides fluent date accessors for April |
| [On\.August](Humanizer.On.August.md 'Humanizer\.On\.August') | Provides fluent date accessors for August |
| [On\.December](Humanizer.On.December.md 'Humanizer\.On\.December') | Provides fluent date accessors for December |
| [On\.February](Humanizer.On.February.md 'Humanizer\.On\.February') | Provides fluent date accessors for February |
| [On\.January](Humanizer.On.January.md 'Humanizer\.On\.January') | Provides fluent date accessors for January |
| [On\.July](Humanizer.On.July.md 'Humanizer\.On\.July') | Provides fluent date accessors for July |
| [On\.June](Humanizer.On.June.md 'Humanizer\.On\.June') | Provides fluent date accessors for June |
| [On\.March](Humanizer.On.March.md 'Humanizer\.On\.March') | Provides fluent date accessors for March |
| [On\.May](Humanizer.On.May.md 'Humanizer\.On\.May') | Provides fluent date accessors for May |
| [On\.November](Humanizer.On.November.md 'Humanizer\.On\.November') | Provides fluent date accessors for November |
| [On\.October](Humanizer.On.October.md 'Humanizer\.On\.October') | Provides fluent date accessors for October |
| [On\.September](Humanizer.On.September.md 'Humanizer\.On\.September') | Provides fluent date accessors for September |
| [OnDate](Humanizer.OnDate.md 'Humanizer\.OnDate') | |
| [OnDate\.April](Humanizer.OnDate.April.md 'Humanizer\.OnDate\.April') | Provides fluent date accessors for April |
| [OnDate\.August](Humanizer.OnDate.August.md 'Humanizer\.OnDate\.August') | Provides fluent date accessors for August |
| [OnDate\.December](Humanizer.OnDate.December.md 'Humanizer\.OnDate\.December') | Provides fluent date accessors for December |
| [OnDate\.February](Humanizer.OnDate.February.md 'Humanizer\.OnDate\.February') | Provides fluent date accessors for February |
| [OnDate\.January](Humanizer.OnDate.January.md 'Humanizer\.OnDate\.January') | Provides fluent date accessors for January |
| [OnDate\.July](Humanizer.OnDate.July.md 'Humanizer\.OnDate\.July') | Provides fluent date accessors for July |
| [OnDate\.June](Humanizer.OnDate.June.md 'Humanizer\.OnDate\.June') | Provides fluent date accessors for June |
| [OnDate\.March](Humanizer.OnDate.March.md 'Humanizer\.OnDate\.March') | Provides fluent date accessors for March |
| [OnDate\.May](Humanizer.OnDate.May.md 'Humanizer\.OnDate\.May') | Provides fluent date accessors for May |
| [OnDate\.November](Humanizer.OnDate.November.md 'Humanizer\.OnDate\.November') | Provides fluent date accessors for November |
| [OnDate\.October](Humanizer.OnDate.October.md 'Humanizer\.OnDate\.October') | Provides fluent date accessors for October |
| [OnDate\.September](Humanizer.OnDate.September.md 'Humanizer\.OnDate\.September') | Provides fluent date accessors for September |
| [OrdinalizeExtensions](Humanizer.OrdinalizeExtensions.md 'Humanizer\.OrdinalizeExtensions') | Ordinalize extensions |
| [PrecisionDateOnlyHumanizeStrategy](Humanizer.PrecisionDateOnlyHumanizeStrategy.md 'Humanizer\.PrecisionDateOnlyHumanizeStrategy') | Precision\-based calculator for distance between two times |
| [PrecisionDateTimeHumanizeStrategy](Humanizer.PrecisionDateTimeHumanizeStrategy.md 'Humanizer\.PrecisionDateTimeHumanizeStrategy') | Precision\-based calculator for distance between two times |
| [PrecisionDateTimeOffsetHumanizeStrategy](Humanizer.PrecisionDateTimeOffsetHumanizeStrategy.md 'Humanizer\.PrecisionDateTimeOffsetHumanizeStrategy') | Precision\-based calculator for distance between two times |
| [PrecisionTimeOnlyHumanizeStrategy](Humanizer.PrecisionTimeOnlyHumanizeStrategy.md 'Humanizer\.PrecisionTimeOnlyHumanizeStrategy') | Precision\-based calculator for distance between two times |
| [PrepositionsExtensions](Humanizer.PrepositionsExtensions.md 'Humanizer\.PrepositionsExtensions') | [System\.DateTime](https://learn.microsoft.com/en-us/dotnet/api/system.datetime 'System\.DateTime') extensions related to spatial or temporal relations |
| [ResourceKeys](Humanizer.ResourceKeys.md 'Humanizer\.ResourceKeys') | |
| [ResourceKeys\.DateHumanize](Humanizer.ResourceKeys.DateHumanize.md 'Humanizer\.ResourceKeys\.DateHumanize') | Encapsulates the logic required to get the resource keys for DateTime\.Humanize |
| [ResourceKeys\.TimeSpanHumanize](Humanizer.ResourceKeys.TimeSpanHumanize.md 'Humanizer\.ResourceKeys\.TimeSpanHumanize') | Encapsulates the logic required to get the resource keys for TimeSpan\.Humanize Examples: TimeSpanHumanize\_SingleMinute, TimeSpanHumanize\_MultipleHours\. |
| [ResourceKeys\.TimeUnitSymbol](Humanizer.ResourceKeys.TimeUnitSymbol.md 'Humanizer\.ResourceKeys\.TimeUnitSymbol') | Encapsulates the logic required to get the resource keys for TimeUnit\.ToSymbol |
| [Resources](Humanizer.Resources.md 'Humanizer\.Resources') | Provides access to the resources of Humanizer |
| [RomanNumeralExtensions](Humanizer.RomanNumeralExtensions.md 'Humanizer\.RomanNumeralExtensions') | Contains extension methods for changing a number to Roman representation \(ToRoman\) and from Roman representation back to the number \(FromRoman\) |
| [StringDehumanizeExtensions](Humanizer.StringDehumanizeExtensions.md 'Humanizer\.StringDehumanizeExtensions') | Contains extension methods for dehumanizing strings\. |
| [StringHumanizeExtensions](Humanizer.StringHumanizeExtensions.md 'Humanizer\.StringHumanizeExtensions') | Contains extension methods for humanizing string values\. |
| [TimeOnlyToClockNotationExtensions](Humanizer.TimeOnlyToClockNotationExtensions.md 'Humanizer\.TimeOnlyToClockNotationExtensions') | Humanizes TimeOnly into human readable sentence |
| [TimeSpanHumanizeExtensions](Humanizer.TimeSpanHumanizeExtensions.md 'Humanizer\.TimeSpanHumanizeExtensions') | Humanizes TimeSpan into human readable form |
| [TimeUnitToSymbolExtensions](Humanizer.TimeUnitToSymbolExtensions.md 'Humanizer\.TimeUnitToSymbolExtensions') | Transform a time unit into a symbol; e\.g\. [Year](Humanizer.TimeUnit.md#Humanizer.TimeUnit.Year 'Humanizer\.TimeUnit\.Year') =\> "a" |
| [To](Humanizer.To.md 'Humanizer\.To') | A portal to string transformation using IStringTransformer |
| [ToQuantityExtensions](Humanizer.ToQuantityExtensions.md 'Humanizer\.ToQuantityExtensions') | Provides extensions for formatting a [System\.String](https://learn.microsoft.com/en-us/dotnet/api/system.string 'System\.String') word as a quantity\. |
| [TruncateExtensions](Humanizer.TruncateExtensions.md 'Humanizer\.TruncateExtensions') | Allow strings to be truncated |
| [Truncator](Humanizer.Truncator.md 'Humanizer\.Truncator') | Gets a ITruncator |
| [TupleizeExtensions](Humanizer.TupleizeExtensions.md 'Humanizer\.TupleizeExtensions') | Convert int to named tuple strings \(1 \-\> 'single', 2\-\> 'double' etc\.\)\. Only values 1\-10, 100, and 1000 have specific names\. All others will return 'n\-tuple'\. |
| [Vocabularies](Humanizer.Vocabularies.md 'Humanizer\.Vocabularies') | Container for registered Vocabularies\.  At present, only a single vocabulary is supported: Default\. |
| [Vocabulary](Humanizer.Vocabulary.md 'Humanizer\.Vocabulary') | A container for exceptions to simple pluralization/singularization rules\. Vocabularies\.Default contains an extensive list of rules for US English\. At this time, multiple vocabularies and removing existing rules are not supported\. |
| [WordsToNumberExtension](Humanizer.WordsToNumberExtension.md 'Humanizer\.WordsToNumberExtension') | Transform humanized string to number; e\.g\. one =\> 1 |

| Structs | |
| :--- | :--- |
| [ByteSize](Humanizer.ByteSize.md 'Humanizer\.ByteSize') | |

| Interfaces | |
| :--- | :--- |
| [ICollectionFormatter](Humanizer.ICollectionFormatter.md 'Humanizer\.ICollectionFormatter') | An interface you should implement to localize Humanize for collections |
| [ICulturedStringTransformer](Humanizer.ICulturedStringTransformer.md 'Humanizer\.ICulturedStringTransformer') | Can transform a string with the given culture |
| [IDateOnlyHumanizeStrategy](Humanizer.IDateOnlyHumanizeStrategy.md 'Humanizer\.IDateOnlyHumanizeStrategy') | Implement this interface to create a new strategy for DateOnly\.Humanize and hook it in the Configurator\.DateOnlyHumanizeStrategy |
| [IDateOnlyToOrdinalWordConverter](Humanizer.IDateOnlyToOrdinalWordConverter.md 'Humanizer\.IDateOnlyToOrdinalWordConverter') | The interface used to localise the ToOrdinalWords method\. |
| [IDateTimeHumanizeStrategy](Humanizer.IDateTimeHumanizeStrategy.md 'Humanizer\.IDateTimeHumanizeStrategy') | Implement this interface to create a new strategy for DateTime\.Humanize and hook it in the Configurator\.DateTimeHumanizeStrategy |
| [IDateTimeOffsetHumanizeStrategy](Humanizer.IDateTimeOffsetHumanizeStrategy.md 'Humanizer\.IDateTimeOffsetHumanizeStrategy') | Implement this interface to create a new strategy for DateTime\.Humanize and hook it in the Configurator\.DateTimeOffsetHumanizeStrategy |
| [IDateToOrdinalWordConverter](Humanizer.IDateToOrdinalWordConverter.md 'Humanizer\.IDateToOrdinalWordConverter') | The interface used to localise the ToOrdinalWords method\. |
| [IFormatter](Humanizer.IFormatter.md 'Humanizer\.IFormatter') | Implement this interface if your language has complex rules around dealing with numbers\. For example in Romanian "5 days" is "5 zile", while "24 days" is "24 de zile" and in Arabic 2 days is يومين not 2 يوم |
| [INumberToWordsConverter](Humanizer.INumberToWordsConverter.md 'Humanizer\.INumberToWordsConverter') | An interface you should implement to localise ToWords and ToOrdinalWords methods |
| [IOrdinalizer](Humanizer.IOrdinalizer.md 'Humanizer\.IOrdinalizer') | The interface used to localise the Ordinalize method |
| [IStringTransformer](Humanizer.IStringTransformer.md 'Humanizer\.IStringTransformer') | Can transform a string |
| [ITimeOnlyHumanizeStrategy](Humanizer.ITimeOnlyHumanizeStrategy.md 'Humanizer\.ITimeOnlyHumanizeStrategy') | Implement this interface to create a new strategy for TimeOnly\.Humanize and hook it in the Configurator\.TimeOnlyHumanizeStrategy |
| [ITimeOnlyToClockNotationConverter](Humanizer.ITimeOnlyToClockNotationConverter.md 'Humanizer\.ITimeOnlyToClockNotationConverter') | The interface used to localise the ToClockNotation method\. |
| [ITruncator](Humanizer.ITruncator.md 'Humanizer\.ITruncator') | Can truncate a string\. |
| [IWordsToNumberConverter](Humanizer.IWordsToNumberConverter.md 'Humanizer\.IWordsToNumberConverter') | |

| Enums | |
| :--- | :--- |
| [ClockNotationRounding](Humanizer.ClockNotationRounding.md 'Humanizer\.ClockNotationRounding') | Options for specifying readable clock notation |
| [DataUnit](Humanizer.DataUnit.md 'Humanizer\.DataUnit') | |
| [GrammaticalCase](Humanizer.GrammaticalCase.md 'Humanizer\.GrammaticalCase') | Options for specifying the desired grammatical case for the output words |
| [GrammaticalGender](Humanizer.GrammaticalGender.md 'Humanizer\.GrammaticalGender') | Options for specifying the desired grammatical gender for the output words |
| [HeadingStyle](Humanizer.HeadingStyle.md 'Humanizer\.HeadingStyle') | Style for the cardinal direction humanization |
| [LetterCasing](Humanizer.LetterCasing.md 'Humanizer\.LetterCasing') | Options for specifying the desired letter casing for the output string |
| [MetricNumeralFormats](Humanizer.MetricNumeralFormats.md 'Humanizer\.MetricNumeralFormats') | Flags for formatting the metric representation of numerals\. |
| [OnNoMatch](Humanizer.OnNoMatch.md 'Humanizer\.OnNoMatch') | Dictating what should be done when a match is not found \- currently used only for DehumanizeTo |
| [Plurality](Humanizer.Plurality.md 'Humanizer\.Plurality') | Provides hint for Humanizer as to whether a word is singular, plural or with unknown plurality |
| [ShowQuantityAs](Humanizer.ShowQuantityAs.md 'Humanizer\.ShowQuantityAs') | Enumerates the ways of displaying a quantity value when converting a word to a quantity string\. |
| [Tense](Humanizer.Tense.md 'Humanizer\.Tense') | Enumerates the possible time references; past or future\. |
| [TimeUnit](Humanizer.TimeUnit.md 'Humanizer\.TimeUnit') | |
| [TruncateFrom](Humanizer.TruncateFrom.md 'Humanizer\.TruncateFrom') | Truncation location for humanizer |
| [WordForm](Humanizer.WordForm.md 'Humanizer\.WordForm') | Options for specifying the form of the word when different variations of the same word exists\. |
